; ModuleID = '/home/carl/AnghaBench/linux/sound/hda/extr_hdac_component.c_snd_hdac_set_codec_wakeup.c'
source_filename = "/home/carl/AnghaBench/linux/sound/hda/extr_hdac_component.c_snd_hdac_set_codec_wakeup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hdac_bus = type { i32, %struct.drm_audio_component* }
%struct.drm_audio_component = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (i32, i32)* }

@ENODEV = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [17 x i8] c"%s codec wakeup\0A\00", align 1
@.str.1 = private unnamed_addr constant [7 x i8] c"enable\00", align 1
@.str.2 = private unnamed_addr constant [8 x i8] c"disable\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @snd_hdac_set_codec_wakeup(%struct.hdac_bus* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.hdac_bus*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.drm_audio_component*, align 8
  store %struct.hdac_bus* %0, %struct.hdac_bus** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load %struct.hdac_bus*, %struct.hdac_bus** %4, align 8
  %8 = getelementptr inbounds %struct.hdac_bus, %struct.hdac_bus* %7, i32 0, i32 1
  %9 = load %struct.drm_audio_component*, %struct.drm_audio_component** %8, align 8
  store %struct.drm_audio_component* %9, %struct.drm_audio_component** %6, align 8
  %10 = load %struct.drm_audio_component*, %struct.drm_audio_component** %6, align 8
  %11 = icmp ne %struct.drm_audio_component* %10, null
  br i1 %11, label %12, label %17

12:                                               ; preds = %2
  %13 = load %struct.drm_audio_component*, %struct.drm_audio_component** %6, align 8
  %14 = getelementptr inbounds %struct.drm_audio_component, %struct.drm_audio_component* %13, i32 0, i32 1
  %15 = load %struct.TYPE_2__*, %struct.TYPE_2__** %14, align 8
  %16 = icmp ne %struct.TYPE_2__* %15, null
  br i1 %16, label %20, label %17

17:                                               ; preds = %12, %2
  %18 = load i32, i32* @ENODEV, align 4
  %19 = sub nsw i32 0, %18
  store i32 %19, i32* %3, align 4
  br label %47

20:                                               ; preds = %12
  %21 = load %struct.drm_audio_component*, %struct.drm_audio_component** %6, align 8
  %22 = getelementptr inbounds %struct.drm_audio_component, %struct.drm_audio_component* %21, i32 0, i32 1
  %23 = load %struct.TYPE_2__*, %struct.TYPE_2__** %22, align 8
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 0
  %25 = load i32 (i32, i32)*, i32 (i32, i32)** %24, align 8
  %26 = icmp ne i32 (i32, i32)* %25, null
  br i1 %26, label %28, label %27

27:                                               ; preds = %20
  store i32 0, i32* %3, align 4
  br label %47

28:                                               ; preds = %20
  %29 = load %struct.hdac_bus*, %struct.hdac_bus** %4, align 8
  %30 = getelementptr inbounds %struct.hdac_bus, %struct.hdac_bus* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 8
  %32 = load i32, i32* %5, align 4
  %33 = icmp ne i32 %32, 0
  %34 = zext i1 %33 to i64
  %35 = select i1 %33, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.2, i64 0, i64 0)
  %36 = call i32 @dev_dbg(i32 %31, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i8* %35)
  %37 = load %struct.drm_audio_component*, %struct.drm_audio_component** %6, align 8
  %38 = getelementptr inbounds %struct.drm_audio_component, %struct.drm_audio_component* %37, i32 0, i32 1
  %39 = load %struct.TYPE_2__*, %struct.TYPE_2__** %38, align 8
  %40 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %39, i32 0, i32 0
  %41 = load i32 (i32, i32)*, i32 (i32, i32)** %40, align 8
  %42 = load %struct.drm_audio_component*, %struct.drm_audio_component** %6, align 8
  %43 = getelementptr inbounds %struct.drm_audio_component, %struct.drm_audio_component* %42, i32 0, i32 0
  %44 = load i32, i32* %43, align 8
  %45 = load i32, i32* %5, align 4
  %46 = call i32 %41(i32 %44, i32 %45)
  store i32 0, i32* %3, align 4
  br label %47

47:                                               ; preds = %28, %27, %17
  %48 = load i32, i32* %3, align 4
  ret i32 %48
}

declare dso_local i32 @dev_dbg(i32, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
